# telegram_bot

./: .gitignore  Bot.cpp  Bot.h  Buttons.cpp  Buttons.h  CMakeLists.txt  Dockerfile  README.md  TelegramApi.cpp  TelegramApi.h  admin_panel.cpp  admin_panel.h  application_flow.cpp  application_flow.h  application_status.h  config.cpp  config.h  database.cpp  database.h  excel_generate.cpp  excel_generate.h  faq_manager.cpp  faq_manager.h  handler_registration.cpp  http_server.cpp  http_server.h  install_bot.sh  logger.cpp  logger.h  main.cpp  main.h  message_to_client.cpp  message_to_client.h  session_manager.cpp  session_manager.h  state_handler.cpp  state_handler.h  super_admin.cpp  super_admin.h  tariff_manager.cpp  (+7 more)
handlers/: input_handlers.h
json-cfg/: config.json  config.json.example  faq.json  tariff_plan.json  tariff_plann.json  trade_points.json
utils/: logger.cpp  logger.h
webapp/: index.html
webapp/admin/: index.html
webapp/admin/css/: admin.css
webapp/admin/js/: admin.js
webapp/css/: style.css
webapp/data/: trade_points.json
webapp/js/: app.js
